<resources>
    <string name="app_name">MySportApplication-v3</string>
    <string name="prompt_email">Email :</string>
    <string name="prompt_password">Mot de passe :</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="connect">Connectez-vous :</string>
    <string name="connexion">Connexion</string>
    <string name="hint">hint</string>
    <string name="cr_er_un_nouveau_account">Créer un nouveau compte</string>
    <string name="mysportapp">MySportApp</string>
    <string name="combien_d_exercices_voulez_vous_cr_er">Combien d\'exercices voulez-vous créer ?</string>
    <string name="pauses_courtes_entre_chaque_exercices">Pauses courtes entre chaque exercices</string>
    <string name="pauses_longues_la_fin_de_la_s_rie">Pauses longues à la fin de la série</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="validation_mot_de_passe">Validation mot de passe :</string>
    <string name="age">Age :</string>
    <string name="adresse_mail">Adresse mail :</string>
    <string name="enregistrez_vos_informations">Enregistrez vos informations :</string>
    <string name="nom">Nom :</string>
    <string name="pr_nom">Prénom :</string>
    <string name="validate">Valider</string>
    <string name="etirements">Etirements</string>
    <string name="biceps">Biceps</string>
    <string name="jambes">Jambes</string>
    <string name="dos">Dos</string>
    <string name="programmes">Programmes</string>
    <string name="lancer">Lancer</string>
    <string name="modifier">Modifier</string>
    <string name="back">Retour</string>
    <string name="descriptif">Descriptif</string>
    <string name="informations">Informations</string>
    <string name="profil">Profile</string>
    <string name="pseudonyme">Pseudonyme :</string>
    <string name="taille">Taille</string>
    <string name="niveau_sportif">Niveau sportif :</string>
    <string name="cancel">Cancel</string>
    <string name="no_account">Pas encore de compte ?</string>
    <string name="test_text">Test Text</string>
    <string name="no_error">No error</string>
    <string name="chronometre">Chronometre</string>



    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chronometerInAndroid">Chronometre</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="setFormat">Set Format</string>
    <string name="clearFormat">Clear Format</string>
</resources>